modified property files

--- a/client-config-production.properties
+++ b/client-config-production.properties
@@ -1,2 +1,1 @@
-msg = Hello world - this is from config server - Prodcution Environment
-var = New Variable
+msg = Hi it's GAMAN from Github - this is from config server - Prodcution Environment
