--- a/client-config.properties
+++ b/client-config.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - default profile
+message = Hi it's GAMAN from Github - this is from config server - default profile
