modified default property file

--- a/client-config.properties
+++ b/client-config.properties
@@ -1,1 +1,1 @@
-message = Hi it's GAMAN from Github - this is from config server - default profile
+msg = Hi it's GAMAN from Github - this is from config server - default profile
